--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Exchainge">
         <activity
+            android:name=".settingsChangeTagline"
+            android:exported="true" />
+        <activity
+            android:name=".settingsChangeUsername"
+            android:exported="true" />
+        <activity
             android:name=".ResetPasswordActivity"
-            android:parentActivityName=".login"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".login" />
         <activity
             android:name=".MessageActivity"
             android:exported="false" />
@@ -39,22 +45,21 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".Notifications.FirebaseIDService"
+        <service
+            android:name=".Notifications.FirebaseIDService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
-
         </service>
-
-        <service android:name=".Notifications.MyFirebaseMessaging"
+        <service
+            android:name=".Notifications.MyFirebaseMessaging"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-
         </service>
     </application>
 
